allow updating reviews
