# config/swagger-config.json
@@ -634,6 +634,47 @@
         }
       },
       "/reviews/{id}": {
+        "put": {
+          "tags": ["Reviews"],
+          "parameters": [
+            {
+              "name": "id",
+              "required": true,
+              "in": "path",
+              "schema": {
+                "type": "string"
+              }
+            },
+            {
+              "name": "body",
+              "required": true,
+              "in": "body",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "content": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          ],
+          "produces": ["application/json"],
+          "responses": {
+            "200": {
+              "description": "review",
+              "schema": {
+                "$ref": "#/definitions/Review"
+              }
+            },
+            "400": {
+              "description": "invalid parameters"
+            },
+            "404": {
+              "description": "not review with given id exists"
+            }
+          }
+        },
         "delete": {
           "tags": ["Reviews"],
           "parameters": [
