# src/routes/review.ts
@@ -1,10 +1,10 @@
 import { Router } from 'express';
-import { addReview, getReviews, removeReview } from '../controllers/review';
+import { addReview, getReviews, removeReview, updateReview } from '../controllers/review';
 import {
   getParameterObjectIdValidator,
   getQueryPropertiesObjectIdValidator
 } from '../middlewares/validators/common-validators';
-import { validateCreateReviewBody } from '../middlewares/validators/review-validator';
+import { validateCreateReviewBody, validateUpdateReviewBody } from '../middlewares/validators/review-validator';
 
 export const reviewRouter = Router();
 
@@ -12,5 +12,7 @@ export const reviewRouter = Router();
 reviewRouter.get('/', getQueryPropertiesObjectIdValidator({ optional: ['restaurantId', 'userId'] }), getReviews);
 //@ts-ignore
 reviewRouter.post('/:restaurantId', getParameterObjectIdValidator('restaurantId'), validateCreateReviewBody, addReview);
+//@ts-ignore
+reviewRouter.put('/:id', getParameterObjectIdValidator('id'), validateUpdateReviewBody, updateReview);
 //@ts-ignore
 reviewRouter.delete('/:id', getParameterObjectIdValidator('id'), removeReview);
